# codensity_io

./: .envrc  .gitignore  .nojekyll  Brewfile  CNAME  README.md  _quarto.yml  blog-news.xml  blog-posts.xml  blog.html  blog.qmd  blog.xml  index.html  index.qmd  justfile  projects.html  projects.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
posts/: _metadata.yml  intervals-categorical.html  intervals-categorical.qmd  intervaltrees-p1.html  intervaltrees-python-intro.html  intervaltrees-python-intro.qmd
site_libs/bootstrap/: bootstrap.min.css
